--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,15 @@ server:
   port: 8080
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    password: root
-    url: jdbc:mysql://localhost:3306/contacts
-    username: root
+    #driver-class-name: com.mysql.cj.jdbc.Driver
+    #driver-class-name: org.h2.Driver
+    password: password
+    #url: jdbc:mysql://localhost:3306/contacts
+    url: jdbc:postgresql://localhost:5432/contacts
+    username: postgres
   jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    #database-platform: org.hibernate.dialect.MySQL8Dialect
+    #database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
     show-sql: true
